# Simplex

./: .gitignore  CMakeLists.txt  LICENSE  TODO.txt
Assets/Actors/: RigidPlatform.xml  TestActor.xml
Libs/glad/include/glad/: glad.h
Libs/glad/src/: glad.c
src/: AppMsg.h  DopeMusic.txt  main.cpp
src/AI/: AIView.cpp  AIView.h
src/Actors/: Actor.cpp  Actor.h  ActorComponent.h  ActorFactory.cpp  ActorFactory.h
src/Actors/Components/: IRenderComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  RenderComponent.cpp  RenderComponent.h  TestComponent.h  TransformComponent.cpp  TransformComponent.h
src/Controller/: IKeyboardHandler.h  IPointerHandler.h  TestController.cpp  TestController.h
src/Events/: Event.h  EventManager.cpp  EventManager.h  FunctionDelegate.h  IDelegate.h  MemberDelegate.h
src/Events/EventTypes/: AppCloseEvent.h  DestroyActorEvent.h  EndSteerEvent.h  EndThrustEvent.h  ModifiedRenderComponentEvent.h  NewRenderComponentEvent.h  StartSteerEvent.h  StartThrustEvent.h
src/Model/: BaseGameLogic.cpp  BaseGameLogic.h  IApplication.cpp  IApplication.h  IGameLogic.cpp  IGameLogic.h
src/Physics/: AABBPhysics.cpp  AABBPhysics.h  Advanced2DPhysics.cpp  Advanced2DPhysics.h  Box2DPhysics.cpp  Box2DPhysics.h  DefaultPhysics.cpp  DefaultPhysics.h  IGamePhysics.h  NullGamePhysics.h  Rectangle.h
src/Processes/: Process.cpp  Process.h  ProcessManager.cpp  ProcessManager.h
src/Processes/ProcessType/: DelayProcess.h  PrintProcess.h
src/SandBox/: GameApplication.cpp  GameApplication.h  TestGameLogic.cpp  TestGameLogic.h  TestGameView.cpp  TestGameView.h
src/Utilities/: PrintMatrix.h  PrintUtils.h  Timer.h  templates.h
src/View/: HumanView.cpp  HumanView.h  IGameView.h  IScreenElement.h  ScreenElementScene.h  Window.cpp  Window.h
src/View/Rendering/: Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture2D.cpp  Texture2D.h
src/View/SceneNodes/: CameraNode.cpp  CameraNode.h  ISceneNode.h  RootNode.cpp  RootNode.h  Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h  SceneNodeProperties.h  SpriteNode.cpp  SpriteNode.h
